--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
           <h4>PHARRELL WILLIAMS</h4>
 
 
-    <h3>HAPPY</h3>
+    <h2><span style="font-size: 60%;">HAPPY</span></h2>
 
     
   
 
-          <h4>| FROM DESPICABLE ME |</h4>
+          <h4>| FROM DESPICABLE ME 2|</h4>
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <h4>| FROM DESPICABLE ME |</h4>
+        <h3>| FROM DESPICABLE ME 2 |</h3>
 
-        <h2>HAPPY</h2>
+        <h1>HAPPY</h1>
 
         <h4>WRITTEN BY PHARRELL WILLIAMS</h4>
 
@@ -38,13 +38,13 @@
 
         <h4><span style="font-size: x-small;">PHARRELLWILLIAMS.COM</span></h4>
 
-        <img src="columbia-logo.png]"/>
+        <img src="./images/columbia-logo.png"/>
 
         <h4>COLOMBIARECORDS<span>.</span>COM</h4>
         
         <br>
 
-    <img src="sony-logo.png"/>
+    <img src="./images/sony-logo.png"/>
 
       </div>
     </div>
